--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@
   line-height: 1.5;
   font-weight: 400;
 
+  text-align: center;
+
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
@@ -40,6 +42,7 @@ button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
+  margin: 0.2em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
@@ -131,8 +134,8 @@ img {
   height: 65px;
   width: 150px;
   background-color: grey;
-  position: absolute;
-  right: 865px;
+  position: relative;
+  left: 5px;
   font-size: 1.5em;
   font-weight: 500;
   padding: 0.6em 1.2em;
@@ -140,4 +143,16 @@ img {
 .NextButton:hover {
   background-color: blue;
   border-color: blanchedalmond;
+}
+
+#shrekMeme {
+  animation-name: rotate;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-play-state: running;
+}
+@keyframes rotate {
+  60% {
+    transform: rotateZ(360deg);
+  }
 }
